# rpggame

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  async.cpp  camera.cpp  character.cpp  game.cpp  globals.h  headers.h  level.cpp  main.cpp  main.cpp.bak  main.old.cpp  old.cpp  texture.cpp
RPG Server/: index.js  package-lock.json  package.json
classes/: NPC.h  camera.h  character.h  entity.h  game.h  keyHandler.h  playableCharacter.h  socket.h  texture.h
cmake/: FindSDL2_ttf.cmake
include/: colours.h  gameNS.h  socket.h  utils.h
maps/: test..js  test.tmx  tilemap.tsx
